# oldap-mediaserver

./: .dockerignore  .gitignore  CODEX_LOG.md  Caddyfile  Makefile  README.md  codex.md  docker-compose.yml  inventory.ini  mediahelper-access.env.example  mediaserver.env  mediaserver.env.example  mediaserver.env.j2  pyproject.toml  thumbnail-fasnacht.py
ansible/: README.md  auth-secrets.example.yml  deploy-media.yml  inventory.ini  test.trig
ansible/group_vars/: all.yml
ansible/host_vars/: media.home.org.yml
ansible/templates/: Caddyfile.j2  docker-compose.yml.j2  mediahelper-access.env.j2  mediaserver.env.j2
caddy-auth-server/: file_auth.py
imageserver/: .dockerignore  Dockerfile  Makefile
imageserver/cantaloupe-oldap/: cantaloupe.properties  delegates.rb  delegates.rb.sample
kakadu-base/: Dockerfile  Makefile
mediaserver/: Dockerfile  Dockerfile.dockerignore  Makefile  app.py  mediaserver.yaml  oldap_client.py  requirements.txt
tests/: test_asset_auth.py  test_deployment_config.py  test_document_upload.py
uploader-api/: Dockerfile  Makefile  app.py  oldap_client.py  requirements.txt
