[tool.poetry]
name = "oldap-mediaserver"
version = "0.1.1"
description = "An upload server for cantaloupe "
authors = ["Lukas Rosenthaler <lukas.rosenthaler@unibas.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pyjwt = "^2.10.1"
flask = "^3.1.2"
flask-cors = "^6.0.1"
pyvips = "^3.0.0"
gunicorn = "^23.0.0"
nanoid = "^2.0.0"
oldaplib = "^0.4.7"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
