[tool.poetry]
name = "oldap-mediaserver"
version = "0.1.2"
description = "An upload server for cantaloupe "
authors = ["Lukas Rosenthaler <lukas.rosenthaler@unibas.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pyjwt = "^2.10.1"
flask = "^3.1.2"
flask-cors = "^6.0.1"
pyvips = "^3.0.0"
gunicorn = "^23.0.0"
nanoid = "^2.0.0"
oldaplib = "^0.5.1"
requests = "^2.32.5"
#poetry-plugin-export = "^1.10.0"

[tool.poetry.group.dev.dependencies]
# Tooling used during development / CI only (must NOT go into runtime Docker images)
# NOTE: poetry-plugin-export must be installed into Poetry itself ("poetry self add poetry-plugin-export"), not as a project dependency.
pytest = "^9.0.0"
coverage = "^7.4.0"
black = "^25.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
